src/objects/CustomCampaign__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Id</label>
        <referenceTo>CustomCampaign__c</referenceTo>
        <relationshipLabel>CustomCampaigns</relationshipLabel>
        <relationshipName>CustomCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.  You only need to set this if you want to override the Time Zone set on the Site Guest User profile.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific/Kiritimati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Chatham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Auckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Enderbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Tongatapu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kamchatka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Lord_Howe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Guadalcanal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Darwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Seoul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Hong_Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Taipei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Saigon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Rangoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Dacca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Yekaterinburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Katmandu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CustomCampaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CustomCampaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomCampaigns</pluralLabel>
    <recordTypes>
        <fullName>Volunteers_Campaign</fullName>
        <active>true</active>
        <label>Volunteers Campaign</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>